// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobilePageHeader Component testing Mobile Page Header with logo and all props 1`] = `
<div>
  <div
    class="styles__MobilePageHeaderWrapper-sc-7ey5h-0 DKdlX"
    data-testid="mobile-page-header-testid"
    id="mobile-page-header"
  >
    <button
      aria-disabled="false"
      class="styles__StyledButton-sc-5pc2aq-1 iprlNm tertiary "
      type="button"
    >
      <span
        class="styles__BtnChild-sc-5pc2aq-2 cBBqTe"
      >
        <svg
          class="fk-icon"
          color="black"
          height="20px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            ChevronLeft
          </title>
          <path
            d="m406-481 177 177q9 9 8.5 21t-9.5 21q-9 9-21.5 9t-21.5-9L341-460q-5-5-7-10t-2-11q0-6 2-11t7-10l199-199q9-9 21.5-9t21.5 9q9 9 9 21.5t-9 21.5L406-481Z"
          />
        </svg>
      </span>
    </button>
    <div
      class="styles__BrandInfo-sc-7ey5h-1 gcFWta"
    >
      <img
        alt="brand-logo"
        class="styles__BrandLogo-sc-7ey5h-2 dFba-dW"
        src="https://static-assets-web.flixcart.com/fk-p-fk-sellerhub/images/fk_vendor_hub_logo1711008672.png"
      />
    </div>
    <div
      class="styles__RightContent-sc-7ey5h-5 dBEiUU"
    >
      <button
        aria-disabled="false"
        class="styles__StyledButton-sc-5pc2aq-1 kOGzOV tertiary "
        type="button"
      >
        <span
          class="styles__BtnChild-sc-5pc2aq-2 cBBqTe"
        >
          <svg
            class="fk-icon"
            color="black"
            height="20px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Search
            </title>
            <path
              d="M378-329q-108.162 0-183.081-75Q120-479 120-585t75-181q75-75 181.5-75t181 75Q632-691 632-584.85 632-542 618-502q-14 40-42 75l242 240q9 8.556 9 21.778T818-143q-9 9-22.222 9-13.222 0-21.778-9L533-384q-30 26-69.959 40.5T378-329Zm-1-60q81.25 0 138.125-57.5T572-585q0-81-56.875-138.5T377-781q-82.083 0-139.542 57.5Q180-666 180-585t57.458 138.5Q294.917-389 377-389Z"
            />
          </svg>
        </span>
      </button>
      <div
        class="styles__FlexConatiner-sc-m0xo0e-0 styles__StyledContainer-sc-m0xo0e-1 QCbyf gQkAjq"
        spacing="0"
      >
        <button
          aria-disabled="false"
          class="styles__StyledButton-sc-5pc2aq-1 kOGzOV tertiary "
          type="button"
        >
          <span
            class="styles__BtnChild-sc-5pc2aq-2 cBBqTe"
          >
            <svg
              class="fk-icon"
              color="black"
              height="20px"
              style="fill: currentColor; stroke: currentColor;"
              viewBox="0 -960 960 960"
              width="20px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                PageInfo
              </title>
              <path
                d="M710-140q-63 0-106.5-43.5T560-290q0-63 43.5-106.5T710-440q63 0 106.5 43.5T860-290q0 63-43.5 106.5T710-140Zm0-60q38 0 64-26t26-64q0-38-26-64t-64-26q-38 0-64 26t-26 64q0 38 26 64t64 26Zm-260-60H150q-12.75 0-21.375-8.675-8.625-8.676-8.625-21.5 0-12.825 8.625-21.325T150-320h300q12.75 0 21.375 8.675 8.625 8.676 8.625 21.5 0 12.825-8.625 21.325T450-260ZM250-520q-63 0-106.5-43.5T100-670q0-63 43.5-106.5T250-820q63 0 106.5 43.5T400-670q0 63-43.5 106.5T250-520Zm0-60q38 0 64-26t26-64q0-38-26-64t-64-26q-38 0-64 26t-26 64q0 38 26 64t64 26Zm560-60H510q-12.75 0-21.375-8.675-8.625-8.676-8.625-21.5 0-12.825 8.625-21.325T510-700h300q12.75 0 21.375 8.675 8.625 8.676 8.625 21.5 0 12.825-8.625 21.325T810-640ZM710-290ZM250-670Z"
              />
            </svg>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="styles__StyledButton-sc-5pc2aq-1 kOGzOV tertiary "
          type="button"
        >
          <span
            class="styles__BtnChild-sc-5pc2aq-2 cBBqTe"
          >
            <svg
              class="fk-icon"
              color="black"
              height="20px"
              style="fill: currentColor; stroke: currentColor;"
              viewBox="0 -960 960 960"
              width="20px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Notifications
              </title>
              <path
                d="M190-200q-12.75 0-21.375-8.675-8.625-8.676-8.625-21.5 0-12.825 8.625-21.325T190-260h50v-304q0-84 49.5-150.5T420-798v-22q0-25 17.5-42.5T480-880q25 0 42.5 17.5T540-820v22q81 17 130.5 83.5T720-564v304h50q12.75 0 21.375 8.675 8.625 8.676 8.625 21.5 0 12.825-8.625 21.325T770-200H190Zm290-302Zm0 422q-33 0-56.5-23.5T400-160h160q0 33-23.5 56.5T480-80ZM300-260h360v-304q0-75-52.5-127.5T480-744q-75 0-127.5 52.5T300-564v304Z"
              />
            </svg>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="styles__StyledButton-sc-5pc2aq-1 kOGzOV tertiary "
          type="button"
        >
          <span
            class="styles__BtnChild-sc-5pc2aq-2 cBBqTe"
          >
            <svg
              class="fk-icon"
              color="black"
              height="20px"
              style="fill: currentColor; stroke: currentColor;"
              viewBox="0 -960 960 960"
              width="20px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Help
              </title>
              <path
                d="M484.028-247Q500-247 511-258.028q11-11.028 11-27T510.972-312q-11.028-11-27-11T457-311.972q-11 11.028-11 27T457.028-258q11.028 11 27 11Zm-3.762 167q-82.734 0-155.5-31.5t-127.266-86q-54.5-54.5-86-127.341Q80-397.681 80-480.5q0-82.819 31.5-155.659Q143-709 197.5-763t127.341-85.5Q397.681-880 480.5-880q82.819 0 155.659 31.5Q709-817 763-763t85.5 127Q880-563 880-480.266q0 82.734-31.5 155.5T763-197.684q-54 54.316-127 86Q563-80 480.266-80Zm.234-60Q622-140 721-239.5t99-241Q820-622 721.188-721 622.375-820 480-820q-141 0-240.5 98.812Q140-622.375 140-480q0 141 99.5 240.5t241 99.5Zm-.5-340Zm2.767-180Q513-660 536-641.5q23 18.5 23 47.196 0 26.304-15.648 45.733Q527.705-529.143 508-512q-23 19-40 42.385-17 23.384-17 52.615 0 11 8.4 17.5T479-393q12 0 19.875-8T509-421q3-21 16-38t30.231-30.784Q580-510 596-537t16-58.614Q612-646 574.5-679.5 537-713 485.548-713 450-713 417-698t-54 44q-7 10-6.5 21.5t9.469 18.5q11.416 8 23.646 5 12.231-3 20.385-14 12.75-17.903 31.875-27.452Q461-660 482.767-660Z"
              />
            </svg>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="styles__StyledButton-sc-5pc2aq-1 kOGzOV tertiary "
          type="button"
        >
          <span
            class="styles__BtnChild-sc-5pc2aq-2 cBBqTe"
          >
            <svg
              class="fk-icon"
              color="black"
              height="20px"
              style="fill: currentColor; stroke: currentColor;"
              viewBox="0 -960 960 960"
              width="20px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Apps
              </title>
              <path
                d="M226-160q-28 0-47-19t-19-47q0-28 19-47t47-19q28 0 47 19t19 47q0 28-19 47t-47 19Zm254 0q-28 0-47-19t-19-47q0-28 19-47t47-19q28 0 47 19t19 47q0 28-19 47t-47 19Zm254 0q-28 0-47-19t-19-47q0-28 19-47t47-19q28 0 47 19t19 47q0 28-19 47t-47 19ZM226-414q-28 0-47-19t-19-47q0-28 19-47t47-19q28 0 47 19t19 47q0 28-19 47t-47 19Zm254 0q-28 0-47-19t-19-47q0-28 19-47t47-19q28 0 47 19t19 47q0 28-19 47t-47 19Zm254 0q-28 0-47-19t-19-47q0-28 19-47t47-19q28 0 47 19t19 47q0 28-19 47t-47 19ZM226-668q-28 0-47-19t-19-47q0-28 19-47t47-19q28 0 47 19t19 47q0 28-19 47t-47 19Zm254 0q-28 0-47-19t-19-47q0-28 19-47t47-19q28 0 47 19t19 47q0 28-19 47t-47 19Zm254 0q-28 0-47-19t-19-47q0-28 19-47t47-19q28 0 47 19t19 47q0 28-19 47t-47 19Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`MobilePageHeader Component testing Mobile Page Header with page title and all props 1`] = `
<div>
  <div
    class="styles__MobilePageHeaderWrapper-sc-7ey5h-0 DKdlX"
    data-testid="mobile-page-header-testid"
    id="mobile-page-header"
  >
    <button
      aria-disabled="false"
      class="styles__StyledButton-sc-5pc2aq-1 iprlNm tertiary "
      type="button"
    >
      <span
        class="styles__BtnChild-sc-5pc2aq-2 cBBqTe"
      >
        <svg
          class="fk-icon"
          color="black"
          height="20px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            ChevronLeft
          </title>
          <path
            d="m406-481 177 177q9 9 8.5 21t-9.5 21q-9 9-21.5 9t-21.5-9L341-460q-5-5-7-10t-2-11q0-6 2-11t7-10l199-199q9-9 21.5-9t21.5 9q9 9 9 21.5t-9 21.5L406-481Z"
          />
        </svg>
      </span>
    </button>
    <div
      class="styles__BrandInfo-sc-7ey5h-1 gcFWta"
    >
      <div
        class="styles__PageTitle-sc-7ey5h-3 hYlggA"
      >
        Flipkart
      </div>
      <div
        class="styles__PageSubTitle-sc-7ey5h-4 cfhIaG"
      >
        Seller Hub
      </div>
    </div>
    <div
      class="styles__RightContent-sc-7ey5h-5 dBEiUU"
    >
      <button
        aria-disabled="false"
        class="styles__StyledButton-sc-5pc2aq-1 kOGzOV tertiary "
        type="button"
      >
        <span
          class="styles__BtnChild-sc-5pc2aq-2 cBBqTe"
        >
          <svg
            class="fk-icon"
            color="black"
            height="20px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Search
            </title>
            <path
              d="M378-329q-108.162 0-183.081-75Q120-479 120-585t75-181q75-75 181.5-75t181 75Q632-691 632-584.85 632-542 618-502q-14 40-42 75l242 240q9 8.556 9 21.778T818-143q-9 9-22.222 9-13.222 0-21.778-9L533-384q-30 26-69.959 40.5T378-329Zm-1-60q81.25 0 138.125-57.5T572-585q0-81-56.875-138.5T377-781q-82.083 0-139.542 57.5Q180-666 180-585t57.458 138.5Q294.917-389 377-389Z"
            />
          </svg>
        </span>
      </button>
      <div
        class="styles__FlexConatiner-sc-m0xo0e-0 styles__StyledContainer-sc-m0xo0e-1 QCbyf gQkAjq"
        spacing="0"
      >
        <button
          aria-disabled="false"
          class="styles__StyledButton-sc-5pc2aq-1 kOGzOV tertiary "
          type="button"
        >
          <span
            class="styles__BtnChild-sc-5pc2aq-2 cBBqTe"
          >
            <svg
              class="fk-icon"
              color="black"
              height="20px"
              style="fill: currentColor; stroke: currentColor;"
              viewBox="0 -960 960 960"
              width="20px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                PageInfo
              </title>
              <path
                d="M710-140q-63 0-106.5-43.5T560-290q0-63 43.5-106.5T710-440q63 0 106.5 43.5T860-290q0 63-43.5 106.5T710-140Zm0-60q38 0 64-26t26-64q0-38-26-64t-64-26q-38 0-64 26t-26 64q0 38 26 64t64 26Zm-260-60H150q-12.75 0-21.375-8.675-8.625-8.676-8.625-21.5 0-12.825 8.625-21.325T150-320h300q12.75 0 21.375 8.675 8.625 8.676 8.625 21.5 0 12.825-8.625 21.325T450-260ZM250-520q-63 0-106.5-43.5T100-670q0-63 43.5-106.5T250-820q63 0 106.5 43.5T400-670q0 63-43.5 106.5T250-520Zm0-60q38 0 64-26t26-64q0-38-26-64t-64-26q-38 0-64 26t-26 64q0 38 26 64t64 26Zm560-60H510q-12.75 0-21.375-8.675-8.625-8.676-8.625-21.5 0-12.825 8.625-21.325T510-700h300q12.75 0 21.375 8.675 8.625 8.676 8.625 21.5 0 12.825-8.625 21.325T810-640ZM710-290ZM250-670Z"
              />
            </svg>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="styles__StyledButton-sc-5pc2aq-1 kOGzOV tertiary "
          type="button"
        >
          <span
            class="styles__BtnChild-sc-5pc2aq-2 cBBqTe"
          >
            <svg
              class="fk-icon"
              color="black"
              height="20px"
              style="fill: currentColor; stroke: currentColor;"
              viewBox="0 -960 960 960"
              width="20px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Notifications
              </title>
              <path
                d="M190-200q-12.75 0-21.375-8.675-8.625-8.676-8.625-21.5 0-12.825 8.625-21.325T190-260h50v-304q0-84 49.5-150.5T420-798v-22q0-25 17.5-42.5T480-880q25 0 42.5 17.5T540-820v22q81 17 130.5 83.5T720-564v304h50q12.75 0 21.375 8.675 8.625 8.676 8.625 21.5 0 12.825-8.625 21.325T770-200H190Zm290-302Zm0 422q-33 0-56.5-23.5T400-160h160q0 33-23.5 56.5T480-80ZM300-260h360v-304q0-75-52.5-127.5T480-744q-75 0-127.5 52.5T300-564v304Z"
              />
            </svg>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="styles__StyledButton-sc-5pc2aq-1 kOGzOV tertiary "
          type="button"
        >
          <span
            class="styles__BtnChild-sc-5pc2aq-2 cBBqTe"
          >
            <svg
              class="fk-icon"
              color="black"
              height="20px"
              style="fill: currentColor; stroke: currentColor;"
              viewBox="0 -960 960 960"
              width="20px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Help
              </title>
              <path
                d="M484.028-247Q500-247 511-258.028q11-11.028 11-27T510.972-312q-11.028-11-27-11T457-311.972q-11 11.028-11 27T457.028-258q11.028 11 27 11Zm-3.762 167q-82.734 0-155.5-31.5t-127.266-86q-54.5-54.5-86-127.341Q80-397.681 80-480.5q0-82.819 31.5-155.659Q143-709 197.5-763t127.341-85.5Q397.681-880 480.5-880q82.819 0 155.659 31.5Q709-817 763-763t85.5 127Q880-563 880-480.266q0 82.734-31.5 155.5T763-197.684q-54 54.316-127 86Q563-80 480.266-80Zm.234-60Q622-140 721-239.5t99-241Q820-622 721.188-721 622.375-820 480-820q-141 0-240.5 98.812Q140-622.375 140-480q0 141 99.5 240.5t241 99.5Zm-.5-340Zm2.767-180Q513-660 536-641.5q23 18.5 23 47.196 0 26.304-15.648 45.733Q527.705-529.143 508-512q-23 19-40 42.385-17 23.384-17 52.615 0 11 8.4 17.5T479-393q12 0 19.875-8T509-421q3-21 16-38t30.231-30.784Q580-510 596-537t16-58.614Q612-646 574.5-679.5 537-713 485.548-713 450-713 417-698t-54 44q-7 10-6.5 21.5t9.469 18.5q11.416 8 23.646 5 12.231-3 20.385-14 12.75-17.903 31.875-27.452Q461-660 482.767-660Z"
              />
            </svg>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="styles__StyledButton-sc-5pc2aq-1 kOGzOV tertiary "
          type="button"
        >
          <span
            class="styles__BtnChild-sc-5pc2aq-2 cBBqTe"
          >
            <svg
              class="fk-icon"
              color="black"
              height="20px"
              style="fill: currentColor; stroke: currentColor;"
              viewBox="0 -960 960 960"
              width="20px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Apps
              </title>
              <path
                d="M226-160q-28 0-47-19t-19-47q0-28 19-47t47-19q28 0 47 19t19 47q0 28-19 47t-47 19Zm254 0q-28 0-47-19t-19-47q0-28 19-47t47-19q28 0 47 19t19 47q0 28-19 47t-47 19Zm254 0q-28 0-47-19t-19-47q0-28 19-47t47-19q28 0 47 19t19 47q0 28-19 47t-47 19ZM226-414q-28 0-47-19t-19-47q0-28 19-47t47-19q28 0 47 19t19 47q0 28-19 47t-47 19Zm254 0q-28 0-47-19t-19-47q0-28 19-47t47-19q28 0 47 19t19 47q0 28-19 47t-47 19Zm254 0q-28 0-47-19t-19-47q0-28 19-47t47-19q28 0 47 19t19 47q0 28-19 47t-47 19ZM226-668q-28 0-47-19t-19-47q0-28 19-47t47-19q28 0 47 19t19 47q0 28-19 47t-47 19Zm254 0q-28 0-47-19t-19-47q0-28 19-47t47-19q28 0 47 19t19 47q0 28-19 47t-47 19Zm254 0q-28 0-47-19t-19-47q0-28 19-47t47-19q28 0 47 19t19 47q0 28-19 47t-47 19Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
